[package]
name = "tonic"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.1"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tonic/0.3.1/tonic/"
repository = "https://github.com/hyperium/tonic"
homepage = "https://github.com/hyperium/tonic"
description = """
A gRPC over HTTP/2 implementation focused on high performance, interoperability, and flexibility.
"""
readme = "../README.md"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["rpc", "grpc", "async", "futures", "protobuf"]

[features]
default = ["transport", "codegen", "prost"]
codegen = ["async-trait"]
transport = [
    "hyper",
    "tokio",
    "tower",
    "tracing-futures",
]
tls = ["transport", "tokio-rustls"]
tls-roots = ["tls", "rustls-native-certs"]
prost = ["prost1", "prost-derive"]

# [[bench]]
# name = "bench_main"
# harness = false

[dependencies]
bytes = "1.0"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
tracing = "0.1"
http = "0.2"
base64 = "0.13"

percent-encoding = "2.1"
tower-service = "0.3"
tokio-util = { version = "0.6", features = ["codec"] }
async-stream = "0.3"
http-body = { version = "0.4"}
pin-project = "1.0"

# prost
prost1 = { version = "0.7", package = "prost",  optional = true }
prost-derive = { version = "0.7", optional = true }

# codegen
async-trait = { version = "0.1.42", optional = true }

# transport
hyper = { version = "0.14", features = ["client", "http2", "server", "stream", "runtime"], optional = true }
tokio = { version = "1.0", features = ["net", "sync"], optional = true }
tokio-stream = { version = "0.1" }
tracing-futures = { version = "0.2", optional = true }

# rustls
tokio-rustls = { version = "0.22", optional = true }
rustls-native-certs = { version = "0.5", optional = true }

tower = { git = "https://github.com/tower-rs/tower", features = ["balance", "load", "make", "buffer", "limit", "util", "timeout"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
static_assertions = "1.1"
rand = "0.8"
bencher = "0.1.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "decode"
harness = false

